addition of classes page, update to index page

--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@
                 <h2>Meet Our Coaching Team</h2>
                 <div class="row card-row">
                     <div class="col-sm-6 col-md-3">
-                        <div class="card">
-                            <div class="card-header coach">
+                        <div class="card coach">
+                            <div class="card-header">
                                 <h4 class="card-title">Laura Williams</h4>
                                 <h5 class="card-subtitle mb-2 text-muted">Head Instructor</h5>
                             </div>
@@ -87,8 +87,8 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
-                        <div class="card">
-                            <div class="card-header coach">
+                        <div class="card coach">
+                            <div class="card-header">
                                 <h4 class="card-title">Holly White</h4>
                                 <h5 class="card-subtitle mb-2 text-muted">Senior Instructor</h5>
                             </div>
@@ -107,8 +107,8 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
-                        <div class="card">
-                            <div class="card-header coach">
+                        <div class="card coach">
+                            <div class="card-header">
                                 <h4 class="card-title">Adam Knight</h4>
                                 <h5 class="card-subtitle mb-2 text-muted">Instructor</h5>
                             </div>
@@ -127,8 +127,8 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
-                        <div class="card">
-                            <div class="card-header coach">
+                        <div class="card coach">
+                            <div class="card-header">
                                 <h4 class="card-title">Emma Owen</h4>
                                 <h5 class="card-subtitle mb-2 text-muted">Instructor</h5>
                             </div>
@@ -152,7 +152,7 @@
             <!-- FAQs -->
             <div class="container">
                 <div class="row">
-                    <div class="col">
+                    <div class="col faq">
                         <h2>Frequently Asked Questions</h2>
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item">
