update of Readme, testimonials added to index.html

--- a/classes.html
+++ b/classes.html
@@ -91,7 +91,9 @@
                         </table>    
                         <div class="card-body">
                             <div class="row">
-                                <div class="col"><img class="classimage" src="assets/images/tiger3.jpeg" alt="Tigers in training"></div>
+                                <div class="col d-none d-md-block">
+                                    <img class="classimage" src="assets/images/tiger3.jpeg" alt="Tigers in training">
+                                </div>
                                 <div class="col">
                                     <p>Our Tigers programme has been specifically created to be interactive and engaging for our youngest of Martial Artists.</p>
                                     <p>The Tiger's learn through a variety of games and activities that introduce the techniques and skills which will set them up for our older classes.</p>
@@ -124,7 +126,9 @@
                         </table>    
                         <div class="card-body">
                             <div class="row">
-                                <div class="col"><img class="classimage" src="assets/images/junior2.jpg" alt="Juniors in training"></div>
+                                <div class="col d-none d-md-block">
+                                    <img class="classimage" src="assets/images/junior2.jpg" alt="Juniors in training">
+                                </div>
                                 <div class="col">
                                     <p>Our junior classes are perfect for children aged 6 – 13 years old.  They will have fun and meet other children with similar interests, whilst burning away that abundance of energy before bed time.</p>
                                     <p>Children who are new to taekwondo will be taught the basics like how to block, strike, punch and kick. Then they work through the syllabus with our instructors, they will be taught more advanced techniques and patterns to progress.</p>
@@ -157,7 +161,9 @@
                         </table>    
                         <div class="card-body">
                             <div class="row">
-                                <div class="col"><img class="classimage" src="assets/images/senior2.jpg" alt="Seniors in training"></div>
+                                <div class="col d-none d-md-block">
+                                    <img class="classimage" src="assets/images/senior2.jpg" alt="Seniors in training">
+                                </div>
                                 <div class="col">
                                     <p>Our Senior class encompasses everything found in our juniors class but with the adults instead. We teach all the basic, intermediate and advanced techniques in order to give you the skills to make you a rounded Martial Artist and on the road to eventually earning a Black Belt, which is only the first chapter on the journey.</p>
                                     <p>Whether your a beginner, have limited experience or a seasoned veteran there is plenty of space on our mats.</p>
@@ -188,7 +194,9 @@
                         </table>    
                         <div class="card-body">
                             <div class="row">
-                                <div class="col"><img class="classimage" src="assets/images/ladies3.jpeg" alt="Ladies in training"></div>
+                                <div class="col d-none d-md-block">
+                                    <img class="classimage" src="assets/images/ladies3.jpeg" alt="Ladies in training">
+                                </div>
                                 <div class="col">
                                     <p>Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p> 
                                     <p>Where else are you going to learn Martial Arts and get  fit at the same time.</p>
