--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                         <div class="navbar-nav">
                             <a class="nav-link " aria-current="page" href="index.html">Home</a>
                             <a class="nav-link" href="about.html">About</a>
-                            <a class="nav-link" href="#">Classes</a>
+                            <a class="nav-link" href="classes.html">Classes</a>
                             <a class="nav-link active" href="contact.html">Contact</a>
                         </div>
                     </div>
