--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Teifi Taekwondo</title>
   </head>
-  <body>
-    
+  <body>  
         <header>
         <!-- Logo Name Navigation Redesigned with in colaboration with mentor-->
             <div class="container-fluid ">
@@ -74,7 +73,7 @@
                 </div>
             </div>
         </div>
-   
+            <!-- Classes-->
         <div class="container" id="classes">
             <h2>Our Classes</h2>
             <div class="row">
@@ -86,6 +85,8 @@
                         <img src="assets/images/tiger1.jpg" class="card-img-top" alt="Tigers in training">
                         <div class="card-body">
                             <p class="card-text">Aimed at our littlest ninjas. Our Tiger Class teaches the basics of Taekwondo through a variety of games - They will not realise they are learning. Hoewver what they will realise is how fun it is. </p>
+                        </div>
+                        <div class="card-footer">
                             <a href="class_tiger.html" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
@@ -98,6 +99,8 @@
                         <img src="assets/images/junior1.jpg" class="card-img-top" alt="Juniors in class training">
                         <div class="card-body">
                             <p class="card-text">Our junior classes are perfect for children aged 6 – 13 years old.  They will have fun and meet other children with similar interests, whilst learning skills that will transcend the classroom.</p>
+                        </div>
+                        <div class="card-footer">
                             <a href="class_junior.html" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
@@ -110,6 +113,8 @@
                         <img src="assets/images/senior1.jpg" class="card-img-top" alt="Seniors in class session">
                         <div class="card-body">
                             <p class="card-text">Our seniors class teaches all the basic, intermediate and advanced techniques in order to make you a rounded Martial Artist. Eventually take you to Black Belt where your Martial Arts journey will continue.</p>
+                        </div>
+                        <div class="card-footer">
                             <a href="class_senior.html" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
@@ -122,19 +127,21 @@
                         <img src="assets/images/ladies1.jpeg" class="card-img-top" alt="ladies training">
                         <div class="card-body">
                             <p class="card-text">Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
+                        </div>
+                        <div class="card-footer">
                             <a href="class_ladies.html" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <!--Location and Contact Details-->
             <div class="container mapdetails">
                 <div class="row">
                     <h2>Where to find Us?</h2>
                     <div class="col-sm-6 ">
                         <div class="contact-info-item">
                             <div class="key">
-                                <p class="uppercase">Address:</p>
+                                <p><i class="fas fa-torii-gate"></i> Address:</p>
                             </div>
                             <div class="value">
                                 <p>St Dogmaels Memorial Hall, St Dogmaels, SA43 RFF </p>
@@ -142,16 +149,16 @@
                         </div>
                         <div class="contact-info-item">
                             <div class="key">
-                                <p class="uppercase">Telephone Number:</p>
+                                <p><i class="fas fa-phone"></i> Telephone Number:</p>
                             </div>
                             <div class="value">
-                                <p>Coach Laura: 07091191144</p>
-                                <p>Coach Holly: 07911123456</p>
+                                <p><i class="fas fa-mobile-alt"></i>  Coach Laura: 07091191144</p>
+                                <p><i class="fas fa-mobile-alt"></i>  Coach Holly: 07911123456</p>
                             </div>
                         </div>
                         <div class="contact-info-item">
                             <div class="key">
-                                <p class="uppercase">Email Address:</p>
+                                <p><i class="fas fa-at"></i> Email Address:</p>
                             </div>
                             <div class="value">
                                 <p>coach@teifitkd.co.uk</p>
@@ -160,6 +167,31 @@
                     </div>
                     <div class="col-sm-6 justify-content-center">
                         <img id="map" src="assets/images/map.jpg" alt="class location">
+                    </div>
+                </div>
+            </div>
+            <!--Testimonials-->
+            <div class="container">
+                <div class="row">
+                    <div class="col testimonials">
+                        <h2>What our students say...</h2>
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <img class="imagequote" src="assets/images/ladies2.jpeg" alt="Parent of Pupils">
+                                <blockquote>Laura, Holly and the team have given my daughter so much confidence since starting our silent ninja is a respectful warrior.</blockquote>
+                                <p class="parent">Scott Summers</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="imagequote" src="assets/images/ladies2.jpeg" alt="Student and Parent">
+                                <blockquote>After sitting on the sidelines watching my children for months I was gently encouraged to stepped into the ladies class. I’m loving it, quickly catching the kids up and have enough confidence to join the senior class.</blockquote>
+                                <p class="parent">Susan Storm</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="imagequote" src="assets/images/ladies2.jpeg" alt="Parent of Pupils">
+                                <blockquote>The focus on fun in these sessions is perfect. The skills and techniques are flooding in and my son doesn’t notice he’s learning.</blockquote>
+                                <p class="parent">Jean Grey</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
