--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
                     <div class="col-md-4 col-sm-7 margin-title">
                         <h1 class="name">Teifi Taekwondo</h1>
                         <h3 class="slogan">Big Kicks begin with Small Clicks</h3>
-                       
                     </div>
                 </div>
             </div>
@@ -32,7 +31,7 @@
                         <div class="navbar-nav">
                             <a class="nav-link " aria-current="page" href="index.html">Home</a>
                             <a class="nav-link active" href="about.html">About</a>
-                            <a class="nav-link" href="#">Classes</a>
+                            <a class="nav-link" href="classes.html">Classes</a>
                             <a class="nav-link" href="contact.html">Contact</a>
                         </div>
                     </div>
