checks on links, update of CSS, correction of images

--- a/classes.html
+++ b/classes.html
@@ -11,7 +11,6 @@
     <title>Teifi Taekwondo</title>
   </head>
   <body>
-    
         <header>
         <!-- Logo Name Navigation Redesigned with in colaboration with mentor-->
             <div class="container-fluid ">
@@ -39,39 +38,8 @@
                 </div>
             </nav>
         </header>
-            <!-- Class Info -->
-        <div class="container" id="why">
-            <div class="row">
-                <div class="col-md-9 benefit">
-                    <h2 class="uppercase">Our Classes</h2>
-                    <div class="row">
-                        <div class="col-md-6 benefit-left">
-                            <h3>Improve Fitness</h3>
-                            <hr>
-                            <p>Boost your stamina, get stronger, lose fat and improve your flexibility, all whilst learning a martial art.</p>
-                            <h3>Build Confidence</h3>
-                            <hr>
-                            <p>Break out of your shell with our warm and supportive community</p>
-                        </div>
-                        <div class="col-md-6 benefit-right">
-                            <h3>Relieve Stress</h3>
-                            <hr>
-                            <p>Training helps your body release a chemical called endorphins which not only helps provides you with “feel good” emotions.</p>
-                            <h3>Develop Discipline</h3>
-                            <hr>
-                            <p>Become focused, patient and poite</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-2 d-none d-md-block">
-                    <div class="meaning">
-                        <p><span class="langk">도</span> <span class="lange">Do</span> <span class="translation">The Way</span></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        <h2 class="heading">Our Classes</h2>
+           <!--Class Information-->
         <div class="container" id="class-outline">
             <div class="row">
                 <div class="col">
@@ -218,11 +186,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <h6>Follow Us on Social Media</h6>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                </div>    
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
+                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a><span class="sr-only">Youtube</span>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
+                </div>     
                 <div class="col-md-5">
                     Sign Up for a trial class today
                     <a href="contact.html" type="button" class="btn btn-danger">Join In</a>
