--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9 history">
-                        <h2 class="uppercase">What is Taekwondo?</h2>
+                        <h2 class="heading">What is Taekwondo?</h2>
                         <p>Taekwondo is a Martial Art from Korea, characterised by punching and kicking techniques with a focus on fast kicking techniques. It’s name is composed of three parts as shown in the English spelling, though it is one word in Korean. "Tae" means "foot,"; "Kwon" means "fist,"; and "Do" means the "way". It is quite literally the Way of the Foot and the Fist.</p>
                         <p>There are two main styles of Taekwondo.
                             <ul>
@@ -62,8 +62,8 @@
                 </div>
             </div>
             <!-- Coaches Cards-->
-            <div class="container">
-                <h2>Meet Our Coaching Team</h2>
+            <div class="container coaches">
+                <h2 class="heading">Meet Our Coaching Team</h2>
                 <div class="row card-row">
                     <div class="col-sm-6 col-md-3">
                         <div class="card coach">
@@ -76,9 +76,9 @@
                               <h6 class="card-subtitle mb-2 text-muted">Third Degree Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Kickboxing</h6>
                               <p class="card-text">Founder of Teifi TKD Laura undertook TKD at the age of 8 to help deal with bullies. Her passion continued through University and the kickboxing clubs into the formation of the club alongside training partner Holly</p>
-                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
+                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
+                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
                           </div>
                           <div class="card-footer">
                                 Laura Teaches our Tigers, Junior, Senior and Ladies Classes
@@ -96,9 +96,9 @@
                               <h6 class="card-subtitle mb-2 text-muted">Second Degree Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Kickboxing</h6>
                               <p class="card-text">Holly started TKD with Laura however due to her University degree temporarily stopped and began her journey in kickboxing. Returning home she reconnected with Laura to complete her first dan in takewondo whilst also introducing Laura to kickboxing fighting her way to her black belt.  </p>
-                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
+                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
+                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
                           </div>
                           <div class="card-footer">
                                 Holly Teaches our Junior, Senior and Ladies Classes
@@ -116,9 +116,9 @@
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Judo</h6>
                               <p class="card-text">Adam joined Teifi Taekwondo after relocating due to a change of career bringing with him knowledge and experince in Judo. Adam's dedication to learning saw him quickly ris through the ranks and his Judo expertise assiting the club in our self-defence drills across the classes.</p>
-                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
+                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
+                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
                           </div>
                           <div class="card-footer">
                                 Adam Teaches our Junior and Senior Classes
@@ -137,9 +137,9 @@
                               
                               <p class="card-text">Emma joined our Juniors class on its first day. Over the last 9 years she has moved up the ranks.</p>
                               <p class="card-text">Whilst currently undertaking a degree in Primary Education she made the move to our instructor team to enhance her learning and talents. Taking our Tigers and Juniors before training herself with the seniors in search of her Second Dan.</p>
-                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
+                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
+                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
                           </div>
                           <div class="card-footer">
                                 Emma Teaches our Tigers and Junior classes
@@ -152,7 +152,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col faq">
-                        <h2>Frequently Asked Questions</h2>
+                        <h2 class="heading">Frequently Asked Questions</h2>
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
@@ -229,11 +229,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <h6>Follow Us on Social Media</h6>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                </div>    
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
+                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a><span class="sr-only">Youtube</span>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
+                </div>     
                 <div class="col-md-5">
                     Sign Up for a trial class today
                     <a href="contact.html" type="button" class="btn btn-danger">Join In</a>
