--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <form class="col-md-9">
+                    <form class="col-md-9 was-validated">
                         <!--Form Itself-->
                         <label for="fname">First Name:</label>
                         <input type="text" class="form-control" id="fname" placeholder="First name" aria-label="First name" required>
@@ -51,7 +51,7 @@
                         <label for="email">Email Address:</label>
                         <input type="email" class="form-control" id="email" placeholder="Email Address" aria-label="Email Address" required>
                         <div>
-                            <p>Which classes are you interested in?</p>
+                            <p>Which of our classes are you interested in?</p>
 			                <input type="checkbox" id="tigers-checkbox" name="tigers">
 			                <label for="tigers-checkbox">Tigers</label>
                             <input type="checkbox" id="juniors-checkbox" name="juniors">
@@ -77,11 +77,10 @@
                         <h6>Free Dobok when you join up</h6>
                     </div>
                 </div>
-            </div>
-            
+            </div>       
             <!-- Contact Information-->
            <div class="container">
-               <div class="row">
+               <div class="row mapdetails">
                     <h2>Where to find Us?</h2>
                     <div class="col-sm-6">
                      <div class="contact-info-item">
@@ -121,11 +120,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <h6>Follow Us on Social Media</h6>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                </div>    
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
+                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a><span class="sr-only">Youtube</span>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
+                </div>     
                 <div class="col-md-5">
                     Sign Up for a trial class today
                     <a href="contact.html" type="button" class="btn btn-danger">Join In</a>
