--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </nav>
         </header>
 
-            <!-- Benefits of Meaning of TKD -->
+            <!-- Class Rules -->
         <div class="container" id="why">
             <div class="row">
                 <div class="col-md-9 benefit">
@@ -75,7 +75,7 @@
         </div>
             <!-- Classes-->
         <div class="container" id="classes">
-            <h2>Our Classes</h2>
+            <h2 class="heading">Our Classes</h2>
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <div class="card classcard">
@@ -87,7 +87,7 @@
                             <p class="card-text">Aimed at our littlest ninjas. Our Tiger Class teaches the basics of Taekwondo through a variety of games - They will not realise they are learning. Hoewver what they will realise is how fun it is. </p>
                         </div>
                         <div class="card-footer">
-                            <a href="class_tiger.html" class="btn btn-primary">Join In</a>
+                            <a href="classes.html" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             <p class="card-text">Our junior classes are perfect for children aged 6 – 13 years old.  They will have fun and meet other children with similar interests, whilst learning skills that will transcend the classroom.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="class_junior.html" class="btn btn-primary">Join In</a>
+                            <a href="classes.html" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                             <p class="card-text">Our seniors class teaches all the basic, intermediate and advanced techniques in order to make you a rounded Martial Artist. Eventually take you to Black Belt where your Martial Arts journey will continue.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="class_senior.html" class="btn btn-primary">Join In</a>
+                            <a href="classes.html" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                             <p class="card-text">Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="class_ladies.html" class="btn btn-primary">Join In</a>
+                            <a href="classes.html" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
             <!--Location and Contact Details-->
             <div class="container mapdetails">
                 <div class="row">
-                    <h2>Where to find Us?</h2>
+                    <h2 class="heading">Where to find Us?</h2>
                     <div class="col-sm-6 ">
                         <div class="contact-info-item">
                             <div class="key">
@@ -173,8 +173,8 @@
             <!--Testimonials-->
             <div class="container">
                 <div class="row">
-                    <div class="col testimonials">
-                        <h2>What our students say...</h2>
+                    <div class="col testimonials justify-content-center">
+                        <h2 class="heading">What our students say...</h2>
                         <div class="row">
                             <div class="col-lg-4">
                                 <img class="imagequote" src="assets/images/ladies2.jpeg" alt="Parent of Pupils">
@@ -182,7 +182,7 @@
                                 <p class="parent">Scott Summers</p>
                             </div>
                             <div class="col-lg-4">
-                                <img class="imagequote" src="assets/images/ladies2.jpeg" alt="Student and Parent">
+                                <img class="imagequote" src="assets/images/student.jpg" alt="Student and Parent">
                                 <blockquote>After sitting on the sidelines watching my children for months I was gently encouraged to stepped into the ladies class. I’m loving it, quickly catching the kids up and have enough confidence to join the senior class.</blockquote>
                                 <p class="parent">Susan Storm</p>
                             </div>
@@ -197,16 +197,15 @@
             </div>
         </div>
 
-
         <footer>
             <!-- sections 1 social media -->
             <div class="row">
                 <div class="col-md-4">
                     <h6>Follow Us on Social Media</h6>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
+                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a><span class="sr-only">Youtube</span>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
                 </div>    
                 <div class="col-md-5">
                     Sign Up for a trial class today
