Completion of Class Page, and addition of CSS

--- a/classes.html
+++ b/classes.html
@@ -71,8 +71,17 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                                <p>Your Coaches for this class</p>
-                         </div>
+                            <h5>Your Coaches for this class</h5>
+                            <table class="table content-center-justify">
+                                <thead>
+                                    <tr>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/laura.jpg" alt="Coach Laura"><p>Coach Laura</p></th>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/emma.jpg" alt="Coach Emma"><p>Coach Emma</p></th>
+                                    </tr>
+                                </thead>
+                            </table>    
+                            <a href="contact.html" class="btn btn-primary">Join In</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -106,8 +115,18 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                                <p>Your Coaches for this class</p>
-                         </div>
+                            <h5>Your Coaches for this class</h5>
+                            <table class="table content-center-justify">
+                                <thead>
+                                    <tr>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/laura.jpg" alt="Coach Laura"><p>Coach Laura</p></th>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/holly.jpg" alt="Coach Holly"><p>Coach Holly</p></th>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/emma.jpg" alt="Coach Emma"><p>Coach Emma</p></th>
+                                    </tr>
+                                </thead>
+                            </table>    
+                            <a href="contact.html" class="btn btn-primary">Join In</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,8 +158,18 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                                <p>Your Coaches for this class</p>
-                         </div>
+                            <h5>Your Coaches for this class</h5>
+                            <table class="table content-center-justify">
+                                <thead>
+                                    <tr>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/laura.jpg" alt="Coach Laura"><p>Coach Laura</p></th>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/holly.jpg" alt="Coach Holly"><p>Coach Holly</p></th>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/adam.jpg" alt="Coach Adam"><p>Coach Adam</p></th>
+                                    </tr>
+                                </thead>
+                            </table>    
+                            <a href="contact.html" class="btn btn-primary">Join In</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -174,8 +203,17 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                                <p>Your Coaches for this class</p>
-                         </div>
+                            <h5>Your Coaches for this class</h5>
+                            <table class="table content-center-justify">
+                                <thead>
+                                    <tr>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/laura.jpg" alt="Coach Laura"><p>Coach Laura</p></th>
+                                        <th scope="col"><img class="imagecoach" src="assets/images/holly.jpg" alt="Coach Holly"><p>Coach Holly</p></th>
+                                    </tr>
+                                </thead>
+                            </table>    
+                            <a href="contact.html" class="btn btn-primary">Join In</a>
+                        </div>
                     </div>
                 </div>
             </div>
