Updating links following testing, creating breathing space between sections.

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             </nav>
         </header>
         <section>
-            <!-- About the Club -->
+            <!-- What is Taekwondo -->
             <div class="container">
                 <div class="row">
                     <div class="col-md-9 history">
@@ -75,7 +75,7 @@
                           <div class="card-body">
                               <h6 class="card-subtitle mb-2 text-muted">Third Degree Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Kickboxing</h6>
-                              <p class="card-text">Founder of Teifi TKD Laura undertook TKD at the age of 8 to help deal with bullies. Her passion continued through University and the kickboxing clubs into the formation of the club alongside training partner Holly</p>
+                              <p class="card-text">Founder of Teifi TKD Laura undertook TKD at the age of 8 to help deal with bullies. Her passion continued through University obtaining her degree and 2nd dan in the same month. Reconnecting with her friend and sparring partner, Coach Holly, saw the formation of Teifi Takewondo</p>
                                 <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
                                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
                                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
@@ -95,7 +95,7 @@
                           <div class="card-body">
                               <h6 class="card-subtitle mb-2 text-muted">Second Degree Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Kickboxing</h6>
-                              <p class="card-text">Holly started TKD with Laura however due to her University degree temporarily stopped and began her journey in kickboxing. Returning home she reconnected with Laura to complete her first dan in takewondo whilst also introducing Laura to kickboxing fighting her way to her black belt.  </p>
+                                <p class="card-text">Holly started Taekwondo with school friend Coach Laura however due to her University degree temporarily stopped and began her journey in kickboxing. Returning home she reconnected with Laura to complete her first dan in takewondo whilst also introducing Laura to kickboxing fighting her way to her black belt. </p>
                                 <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
                                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
                                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
@@ -135,8 +135,7 @@
                           <div class="card-body">
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Taekwondo</h6>
                               
-                              <p class="card-text">Emma joined our Juniors class on its first day. Over the last 9 years she has moved up the ranks.</p>
-                              <p class="card-text">Whilst currently undertaking a degree in Primary Education she made the move to our instructor team to enhance her learning and talents. Taking our Tigers and Juniors before training herself with the seniors in search of her Second Dan.</p>
+                              <p class="card-text">Emma joined our Juniors class on its first day. Over the last 9 years she has moved up the ranks. Whilst currently undertaking a degree in Primary Education she made the move to our instructor team to enhance her learning and talents. Taking our Tigers and Juniors before training herself with the seniors in search of her Second Dan.</p>
                                 <a href="#" target="_blank"><i class="fab fa-facebook"></i></a><span class="sr-only">Facebook</span>
                                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><span class="sr-only">Instagram</span>
                                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a><span class="sr-only">Twitter</span>
