--- a/classes.html
+++ b/classes.html
@@ -41,10 +41,10 @@
         <h2 class="heading">Our Classes</h2>
            <!--Class Information-->
         <div class="container" id="class-outline">
-            <div class="row">
+            <div class="row classes">
                 <div class="col">
                     <div class="card">
-                        <div class="card-header head-tiger">
+                        <div class="card-header head-tiger" id="class-tiger">
                             <h5 class="card-title">Tigers</h5>
                         </div>
                         <table class="table">
@@ -85,10 +85,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row classes">
                 <div class="col">
                     <div class="card">
-                        <div class="card-header head-juniors">
+                        <div class="card-header head-juniors" id="class-junior">
                             <h5 class="card-title">Juniors</h5>
                         </div>
                         <table class="table">
@@ -130,10 +130,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row classes">
                 <div class="col">
                     <div class="card">
-                        <div class="card-header head-seniors">
+                        <div class="card-header head-seniors" id="class-senior">
                             <h5 class="card-title">Seniors</h5>
                         </div>
                         <table class="table">
@@ -173,10 +173,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row classes">
                 <div class="col">
                     <div class="card">
-                        <div class="card-header head-ladies">
+                        <div class="card-header head-ladies" id="class-ladies">
                             <h5 class="card-title"><span>Ladies</span> <span class="badge bg-success">New</span></h5>
                         </div>
                         <table class="table">
@@ -218,6 +218,7 @@
                 </div>
             </div>
         </div>
+         
    
         <footer>
             <!-- sections 1 social media -->
@@ -235,6 +236,7 @@
                 </div>
                 <div class="col-md-3">Copywright 2021</div>
             </div>
+            
         </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
