--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,10 @@
         </header>
         <section>
             <div class="container">
+                <h2 class="heading">Join In</h2>
                 <div class="row">
                     <form class="col-md-9 was-validated">
+                    <p class="heading">Give us a message to book your place in class or for any questions you have.</p>
                         <!--Form Itself-->
                         <label for="fname">First Name:</label>
                         <input type="text" class="form-control" id="fname" placeholder="First name" aria-label="First name" required>
@@ -61,13 +63,13 @@
                             <input type="checkbox" id="ladies-checkbox" name="ladies">
 			                <label for="ladies-checkbox">Ladies</label>
                         </div>
-                        <div>
+                        <div class="queries">
                             <p>Additional Questions:</p>
-                            <textarea class="queries" placeholder="Additonal Questions">
+                            <textarea  placeholder="Additonal Questions">
 
                             </textarea>
                         </div>
-                        <button type="button" class="btn btn-danger">Free Lesson Please</button>
+                        <button type="button" class="btn btn-danger contactbutton">Free Lesson Please</button>
                     </form>
                     <div class="col-md-3">
                         <h3><span class="badge bg-success">Free</span> Trial Lessons</h3>
@@ -81,11 +83,11 @@
             <!-- Contact Information-->
            <div class="container">
                <div class="row mapdetails">
-                    <h2>Where to find Us?</h2>
-                    <div class="col-sm-6">
-                     <div class="contact-info-item">
+                    <h2 class="heading">Where to find Us?</h2>
+                    <div class="col-sm-6 ">
+                        <div class="contact-info-item">
                             <div class="key">
-                                <p class="uppercase">Address:</p>
+                                <p><i class="fas fa-torii-gate"></i> Address:</p>
                             </div>
                             <div class="value">
                                 <p>St Dogmaels Memorial Hall, St Dogmaels, SA43 RFF </p>
@@ -93,16 +95,16 @@
                         </div>
                         <div class="contact-info-item">
                             <div class="key">
-                                <p class="uppercase">Telephone Number:</p>
+                                <p><i class="fas fa-phone"></i> Telephone Number:</p>
                             </div>
                             <div class="value">
-                                <p>Coach Laura: 07091191144</p>
-                                <p>Coach Holly: 07911123456</p>
+                                <p><i class="fas fa-mobile-alt"></i>  Coach Laura: 07091191144</p>
+                                <p><i class="fas fa-mobile-alt"></i>  Coach Holly: 07911123456</p>
                             </div>
                         </div>
                         <div class="contact-info-item">
                             <div class="key">
-                                <p class="uppercase">Email Address:</p>
+                                <p><i class="fas fa-at"></i> Email Address:</p>
                             </div>
                             <div class="value">
                                 <p>coach@teifitkd.co.uk</p>
