--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <p class="card-text">Aimed at our littlest ninjas. Our Tiger Class teaches the basics of Taekwondo through a variety of games - They will not realise they are learning. Hoewver what they will realise is how fun it is. </p>
                         </div>
                         <div class="card-footer">
-                            <a href="classes.html" class="btn btn-primary">Join In</a>
+                            <a href="classes.html#class-tiger" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             <p class="card-text">Our junior classes are perfect for children aged 6 – 13 years old.  They will have fun and meet other children with similar interests, whilst learning skills that will transcend the classroom.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="classes.html" class="btn btn-primary">Join In</a>
+                            <a href="classes.html#class-junior" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                             <p class="card-text">Our seniors class teaches all the basic, intermediate and advanced techniques in order to make you a rounded Martial Artist. Eventually take you to Black Belt where your Martial Arts journey will continue.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="classes.html" class="btn btn-primary">Join In</a>
+                            <a href="classes.html#class-senior" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                             <p class="card-text">Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="classes.html" class="btn btn-primary">Join In</a>
+                            <a href="classes.html#class-ladies" class="btn btn-primary">Join In</a>
                         </div>
                     </div>
                 </div>
