Final Checks before submission

--- a/classes.html
+++ b/classes.html
@@ -234,7 +234,7 @@
                     Sign Up for a trial class today
                     <a href="contact.html" type="button" class="btn btn-danger">Join In</a>
                 </div>
-                <div class="col-md-3">Copywright 2021</div>
+                <div class="col-md-3">Copyright 2021</div>
             </div>
             
         </footer>
